# ski1nny_server

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  commitlint.config.cjs  docker-compose.yml  package-lock.json  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 20260313_0001_create_ingredient_domain.py  20260313_0002_add_ingredient_indexes.py  20260315_0003_create_product_scan_domain.py  20260315_0004_add_product_scan_indexes.py  20260315_0005_create_user_profile_trouble_log_domain.py  20260315_0006_add_user_trouble_log_indexes.py  20260315_0007_add_user_auth_state.py
app/: main.py
app/api/: deps.py  ingredient.py  product.py  recommendation.py  user.py
app/core/: config.py  database.py  exception_handlers.py  exceptions.py  llm_client.py  ocr_client.py  security.py  vector_store.py
app/models/: ingredient.py  product.py  trouble_log.py  user.py
app/repositories/: ingredient_repository.py  product_repository.py  scan_repository.py  trouble_log_repository.py  user_profile_repository.py  user_repository.py
app/schemas/: error.py  ingredient.py  product.py  user.py  (+1 more)
docs/: 06_커밋_컨벤션.md  08_GitHub_마일스톤_이슈_운영안.md
knowledge_base/: README.md
tests/: conftest.py  test_auth_security.py  test_exception_handlers.py  test_ingredient_api.py  test_ocr_client.py  test_product_api.py  test_rag_service.py  test_recommendation_api.py  test_recommendation_cache.py  test_recommendation_service.py  test_scan_service.py  test_user_auth_api.py  test_user_profile_trouble_services.py  test_user_trouble_api.py  test_validation_service.py
(+28 files in other folders)
